--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -92,7 +92,7 @@ main{
 
 .main__contacto{
     padding: 20px;
-    .formulario{
+    form{
         font-size: 20px;
         div{
             width: 100%;
