--- a/css/estilos.css
+++ b/css/estilos.css
@@ -263,17 +263,21 @@ main {
   grid-template-rows: repeat(auto);
   justify-content: center; }
   .main__section__merch .card {
+    transition: 0.5s;
+    object-fit: cover;
     margin: 10px;
     padding: 20px; }
     .main__section__merch .card .card-img-top {
       height: 200px;
       width: auto;
       object-fit: cover; }
-    .main__section__merch .card div a {
+    .main__section__merch .card div button {
       position: absolute;
       left: 100px;
       right: 100px;
       bottom: 15px; }
+  .main__section__merch .card:hover {
+    scale: 1.1; }
 
 footer {
   background-color: #ced8e0;
